[feat]: 관심아이템등록, 가성비계산 구현